fix: animation z-index

--- a/src/components/PokeCard/styles.css
+++ b/src/components/PokeCard/styles.css
@@ -1,11 +1,11 @@
 .container-card {
     position: relative;
-
     border-radius: 1rem;
     box-shadow: 0 2px 9px rgba(0, 0, 0, 0.2);
     width: 20rem;
     cursor: pointer;
     overflow: hidden;
+    z-index: 1;
 }
 .container-card::before {
     content: '';
@@ -16,19 +16,23 @@
     height: 0;
     background-color: var(--poke-color-type-two);
     transition: height 0.5s ease;
-    z-index: 2;
+    z-index: 5
 }
 
 .container-card:hover::before {
     height: 1.3rem;
+    z-index: 4;
 }
-
-
 
 .container-card__img {
     width: 100%;
     height: 18rem;
     position: relative;
+    z-index: 2;
+    transition: transform 0.3s ease;
+}
+.container-card__img:hover {
+    transform: scale(1.08); 
 }
 
 .container-card__img--background {
@@ -36,7 +40,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
-    z-index: 1;
+    z-index: -1; 
 }
 
 .container-card__img--gif {
@@ -57,16 +61,13 @@
     font-weight: 600;
     border-radius: 0 0 10px 10px;
     background-color: var(--poke-color-type-two);
-    
-
+    position: relative;
+    z-index: 2;
 }
-
-
 
 .container-card__desc--title h1 {
     font-size: 2.5rem;
     transition: transform 0.3s ease;
-
 }
 
 .container-card__desc--subtitle p {
@@ -79,9 +80,8 @@
     margin-right: 3px;
 }
 
-
 .container-card:hover .container-card__desc h1 {
-    transform: translateY(-10px); /* ou qualquer valor que você preferir */
+    transform: translateY(-10px); 
 }
 .container-card:hover .container-card__desc p {
     transform: translateY(-6px);
